src/test/ui/borrowck/borrowck-init-op-equal.stderr
error[E0381]: use of possibly uninitialized variable: `v`
  --> $DIR/borrowck-init-op-equal.rs:3:5
   |
LL |     v += 1;
   |     ^^^^^^ use of possibly uninitialized `v`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
